# pgvector-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/candle/: Cargo.toml
examples/candle/src/: main.rs
examples/citus/: Cargo.toml
examples/citus/src/: main.rs
examples/cohere/: Cargo.toml
examples/cohere/src/: main.rs
examples/disco/: Cargo.toml
examples/disco/src/: main.rs
examples/hybrid_search/: Cargo.toml
examples/hybrid_search/src/: main.rs
examples/loading/: Cargo.toml
examples/loading/src/: main.rs
examples/openai/: Cargo.toml
examples/openai/src/: main.rs
src/: bit.rs  diesel_ext.rs  halfvec.rs  lib.rs  postgres_ext.rs  sparsevec.rs  sqlx_ext.rs  vector.rs
src/diesel_ext/: bit.rs  expression_methods.rs  halfvec.rs  mod.rs  sparsevec.rs  vector.rs
src/postgres_ext/: bit.rs  halfvec.rs  sparsevec.rs  vector.rs
src/sqlx_ext/: bit.rs  halfvec.rs  mod.rs  sparsevec.rs  vector.rs
