[package]
name = "pgvector"
version = "0.2.2"
description = "pgvector support for Rust"
repository = "https://github.com/pgvector/pgvector-rust"
license = "MIT OR Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2018"
rust-version = "1.56.0"
readme = "README.md"

[dependencies]
bytes = "1"
postgres = { version = "0.19", default-features = false, optional = true }
diesel = { version = "2", default-features = false, features = ["postgres"], optional = true }
sqlx = { version = ">= 0.5, < 0.8", default-features = false, features = ["postgres"], optional = true }

[dev-dependencies]
diesel = { version = "2", features = ["32-column-tables"] }
sqlx = { version = "0", default-features = false, features = ["runtime-async-std-native-tls"] }
async-std = { version = "1", features = ["attributes"] }

[features]
default = ["postgres"]
