[package]
name = "pgvector"
version = "0.4.1"
description = "pgvector support for Rust"
repository = "https://github.com/pgvector/pgvector-rust"
license = "MIT OR Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.60.0"
readme = "README.md"

[lib]
doctest = false

[dependencies]
bytes = { version = "1", optional = true }
postgres-types = { version = "0.2", default-features = false, optional = true }
diesel = { version = "2", default-features = false, features = ["postgres"], optional = true }
sqlx = { version = "0.8", default-features = false, features = ["postgres"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
half = { version = "2", default-features = false, optional = true }

[dev-dependencies]
postgres = { version = "0.19", default-features = false }
tokio-postgres = { version = "0.7", default-features = false }
diesel = { version = "2", default-features = false, features = ["32-column-tables"] }
sqlx = { version = "0", default-features = false, features = ["runtime-tokio", "tls-native-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[features]
postgres = ["dep:postgres-types", "dep:bytes"]
halfvec = ["dep:half"]

[package.metadata.docs.rs]
features = ["halfvec"]
